# tap-athena

./: .env.template  .pre-commit-config.yaml  LICENSE  README.md  catalog.json  jobout01.jsonl  jobout02.jsonl  meltano.yml  mypy.ini  pyproject.toml  tap-athena.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml  cicd_workflow.yml
tap_athena/: __init__.py  client.py  database.py  tap.py  types.py
tap_athena/tests/: test_core.py
tests/: __init__.py  catalog.json  test_core.py
