[tool.poetry]
name = "tap-athena"
version = "1.0.0"
description = "`tap-athena` is a Singer tap for Athena, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["AJ Steers", "Pat Nadolny"]
keywords = [
    "ELT",
    "Athena",
]
license = "Apache 2.0"
packages = [
    { include = "tap_athena" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
requests = "^2.25.1"
pyathena = "^2.3.0"
singer-sdk = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^5.0.4"
darglint = "^1.8.1"
black = "^23.1.0"
pyupgrade = "^3.3.1"
mypy = "^1.0.0"
isort = "^5.11.5"
moto = "^4.1.6"
coverage = "^7.2.3"
pydocstyle = "^6.3.0"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_dynamodb"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-athena = 'tap_athena.tap:TapAthena.cli'
