[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core==1.9",
]

[tool.poetry]
name = "tap-athena"
version = "1.1.0"
description = "`tap-athena` is a Singer tap for Athena, built with the Meltano Singer SDK."
readme = "README.md"
authors = [
  "AJ Steers <aaronsteers@gmail.com>",
  "Pat Nadolny <pat@meltano.com>",
]
maintainers = [
  "Metano Team and Contributors <hello@meltano.com>",
]
keywords = [
  "ELT",
  "Athena",
]
license = "Apache-2.0"
packages = [
  { include = "tap_athena" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4"
pyathena = ">=3,<4"
singer-sdk = "~=0.38.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
moto = "^5.0.0"
coverage = "^7.3.2"

[tool.poetry.extras]
s3 = [
  "fs-s3fs",
]

[tool.poetry.scripts]
# CLI declaration
tap-athena = 'tap_athena.tap:TapAthena.cli'

[tool.ruff]
target-version = "py38"

line-length = 88
lint.select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  # "CPY",
  "C4",
  "C90",
  "COM",
  "D",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "F",
  "FA",
  "FBT",
  "FIX",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "ISC",
  "N",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "Q",
  "RET",
  "RSE",
  "RUF",
  # "ASYNC",
  "S",
  "SIM",
  "SLF",
  "T10",
  "T20",
  "TCH",
  "TD",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "ANN101", # missing-type-self
  "FIX002", # line-contains-todo
  "TD002",  # missing-todo-author
]
lint.per-file-ignores."tests/*" = [
  "S101",
]
lint.unfixable = [
  "ERA", # commented-out-code
]
lint.flake8-import-conventions.banned-from = [
  "typing",
]
lint.flake8-import-conventions.extend-aliases."typing" = "t"
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore::sqlalchemy.exc.SADeprecationWarning",
  "ignore:datetime.datetime.utcnow:DeprecationWarning:botocore.auth", # https://github.com/boto/boto3/issues/3889
]

[tool.mypy]
plugins = [
  "sqlalchemy.ext.mypy.plugin",
]
python_version = "3.9"
warn_unused_configs = true
